WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95497
~JSNPObject should call invalidate() if it hasn't been called already
https://bugs.webkit.org/show_bug.cgi?id=95497
Summary
~JSNPObject should call invalidate() if it hasn't been called already
Mark Hahnenberg
Reported
2012-08-30 13:59:59 PDT
Finalization is no longer eager, just like destruction, so the original intent behind this ASSERT in ~JSNPObject is no longer relevant. Therefore, we can remove all destruction-related stuff from JSNPObject.
Attachments
Patch
(1.98 KB, patch)
2012-08-30 14:01 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
Patch
(1.34 KB, patch)
2012-08-30 14:34 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2012-08-30 14:01:36 PDT
Created
attachment 161551
[details]
Patch
Mark Hahnenberg
Comment 2
2012-08-30 14:08:30 PDT
http://trac.webkit.org/changeset/121316
is the change that caused this new behavior. It was meant to remove this ASSERT, but it was overlooked.
Geoffrey Garen
Comment 3
2012-08-30 14:18:24 PDT
Comment on
attachment 161551
[details]
Patch Still need a destructor so we don't leak the np object.
Mark Hahnenberg
Comment 4
2012-08-30 14:34:08 PDT
Created
attachment 161558
[details]
Patch
Geoffrey Garen
Comment 5
2012-08-30 15:15:37 PDT
Comment on
attachment 161558
[details]
Patch r=me
WebKit Review Bot
Comment 6
2012-08-30 17:42:51 PDT
Comment on
attachment 161558
[details]
Patch Clearing flags on attachment: 161558 Committed
r127219
: <
http://trac.webkit.org/changeset/127219
>
WebKit Review Bot
Comment 7
2012-08-30 17:42:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug