~JSNPObject should call invalidate() if it hasn't been called already https://bugs.webkit.org/show_bug.cgi?id=95497

Reviewed by Geoffrey Garen.

Finalization is no longer eager, just like destruction, so the original intent behind
this ASSERT in ~JSNPObject is no longer relevant. Therefore, we can just call invalidate()
ourselves in ~JSNPObject.

* WebProcess/Plugins/Netscape/JSNPObject.cpp:
(WebKit::JSNPObject::~JSNPObject):


Canonical link: https://commits.webkit.org/113390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127219 268f45cc-cd09-0410-ab3c-d52691b4dbfc